mudancas adicionadas ao projeto

--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,4 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-        </script><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
@@ -69,7 +30,15 @@
         </div>
     </nav>
 
-    <div class="container-custom">
+    <section class="intro-section">
+        <div class="container-custom text-center">
+            <h1>Bem-vindo à Educação Financeira!</h1>
+            <p>Aprenda a gerir suas finanças, definir metas, planejar orçamentos e conversar com outros sobre educação financeira. Nosso site oferece ferramentas simples e práticas para alcançar seus objetivos financeiros.</p>
+            <button class="btn btn-primary btn-lg" onclick="scrollToMetas()">Comece Agora</button>
+        </div>
+    </section>
+
+    <div class="container-custom" id="metasSection">
         <div class="row">
             <div class="col-md-5 form-container">
                 <h2>💰 Definir Meta Financeira</h2>
@@ -129,6 +98,10 @@
                 alert('Erro ao enviar meta!');
             }
         });
+
+        function scrollToMetas() {
+            document.getElementById('metasSection').scrollIntoView({ behavior: 'smooth' });
+        }
 
         carregarDicas();
     </script>
