--- a/public/login.html
+++ b/public/login.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
+  <!-- Define a codificação de caracteres -->
   <meta charset="UTF-8">
+  <!-- Configura responsividade -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
+  <!-- Importa Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Importa estilos personalizados -->
   <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-  <!-- Navbar -->
+  <!-- Barra de navegação -->
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">Educação Financeira</a>
@@ -44,44 +48,56 @@
       </div>
       <button type="submit" class="btn btn-primary">Entrar</button>
     </form>
-    <div id="loginFeedback" class="alert d-none"></div>
+    <div id="errorMessage" class="alert alert-danger d-none"></div>
   </div>
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
+    // Função para exibir notificações flutuantes
+    function showNotification(type, message) {
+      const notification = document.createElement('div');
+      notification.className = `notification ${type}`;
+      notification.textContent = message;
+      document.body.appendChild(notification);
+      setTimeout(() => notification.remove(), 3000);
+    }
+
+    // Manipula envio do formulário de login
     document.getElementById('loginForm').addEventListener('submit', async (e) => {
       e.preventDefault();
-      const feedback = document.getElementById('loginFeedback');
-      const data = {
-        email: document.getElementById('email').value,
-        password: document.getElementById('password').value
-      };
+      const email = document.getElementById('email').value.trim();
+      const password = document.getElementById('password').value.trim();
+      const errorMessage = document.getElementById('errorMessage');
+
+      if (!email || !password) {
+        errorMessage.textContent = 'Por favor, preencha todos os campos.';
+        errorMessage.classList.remove('d-none');
+        return;
+      }
 
       try {
         const response = await fetch('/api/login', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(data)
+          body: JSON.stringify({ email, password })
         });
         const result = await response.json();
         if (response.ok) {
-          feedback.classList.remove('d-none', 'alert-danger');
-          feedback.classList.add('alert-success');
-          feedback.textContent = result.message;
           localStorage.setItem('user', result.username);
           localStorage.setItem('userId', result.userId);
           localStorage.setItem('isAdmin', result.isAdmin);
+          showNotification('success', 'Login bem-sucedido!');
           window.location.href = result.isAdmin ? 'admin.html' : 'index.html';
         } else {
-          feedback.classList.remove('d-none', 'alert-success');
-          feedback.classList.add('alert-danger');
-          feedback.textContent = result.error;
+          console.log(`Erro no login: ${result.error}, email=${email}`);
+          errorMessage.textContent = result.error || 'Credenciais inválidas. Verifique seu email e senha.';
+          errorMessage.classList.remove('d-none');
         }
       } catch (error) {
-        feedback.classList.remove('d-none', 'alert-success');
-        feedback.classList.add('alert-danger');
-        feedback.textContent = 'Erro ao fazer login.';
+        console.error('Erro na requisição de login:', error);
+        errorMessage.textContent = 'Erro ao conectar ao servidor. Tente novamente mais tarde.';
+        errorMessage.classList.remove('d-none');
       }
     });
   </script>
